Optimize for Railway's single volume limitation and requirements
- Removed railway.json (using only railway.toml as per Railway best practices)
- Removed VOLUME instruction from Dockerfile (not allowed by Railway)
- Updated to work with Railway's single volume limitation (mounted at /data)
- Added symlink setup for persistent storage directories
- Set RAILWAY_RUN_UID=0 for proper Docker permissions
- Updated documentation with clear volume setup instructions
- Simplified railway.toml configuration for Railway deployment

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
 # Railway Environment Variables
 PORT=3000
 RAILWAY_ENVIRONMENT=production
+RAILWAY_RUN_UID=0  # Required for Docker operations
 
 # Dokploy Configuration
 DOKPLOY_PORT=3000
