--- a/railway.toml
+++ b/railway.toml
@@ -1,23 +1,13 @@
 [build]
-builder = "dockerfile"
+builder = "DOCKERFILE"
 dockerfilePath = "./Dockerfile"
 
 [deploy]
 restartPolicyType = "ON_FAILURE"
 restartPolicyMaxRetries = 3
+healthcheckPath = "/"
+healthcheckTimeout = 120
 
-[[services]]
-name = "dokploy"
-port = 3000
-
-[services.healthcheck]
-path = "/"
-timeout = 120
-
-[[services.volumes]]
-mount = "/etc/dokploy"
-name = "dokploy-config"
-
-[[services.volumes]]
-mount = "/var/lib/docker"
-name = "docker-data"
+# Note: Railway only allows one volume per service
+# The volume will be automatically mounted at /data
+# We'll symlink necessary directories to this volume in the entrypoint script
